--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.1.1",
   "description": "An Ionic project",
   "dependencies": {
+    "body-parser": "~1.0.1",
+    "cors": "^2.7.1",
+    "express": "~4.0.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "express": "~4.0.0",
-    "morgan": "~1.0.0",
-    "body-parser": "~1.0.1"
+    "gulp-sass": "^2.0.4",
+    "morgan": "~1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
